# metal-styled-rectangle

./: Cargo.toml  build.rs
src/: bindgen.h  main.rs  shader_types.h  shaders.metal  shaders.metallib
