[package]
name = "window-with-primitive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocoa = "0.24.1"
core-graphics-types = "0.1.1"
embed_plist = "1.2.2"
metal = "0.24.0"
objc = { version = "0.2.7", features = [] }
objc_exception = "0.1.2"
winit = "0.28.5"

[build-dependencies]
bindgen = "0.65.1"
